# ethyca-python-takehome-2

./: Ethyca.postman_collection.json  Noghts & Crosses.postman_collection.json  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: cache.py  main.py  models.py
app/api/: main.py
app/api/routes/: games.py  test_games.py
